Add basic RSC implementation

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="React with Server Components">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="main.js"></script>
-    <title>React Server Components</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="React with Server Components">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>React Server Components</title>
+  <script defer src="main.js"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
